fix misaligned submenus

--- a/resources/css/app/navbar.scss
+++ b/resources/css/app/navbar.scss
@@ -65,7 +65,7 @@
                     display: none;
                     list-style-type: none;
                     position: absolute;
-                    margin: 0;
+                    margin: 1px 0 0 0;
                     padding: 0;
                     white-space: nowrap;
                     z-index: 1;
